syntax = "proto3";
option java_multiple_files = true;
package ds.adeesha.communication.grpc.generated;

message CheckBalanceRequest {
  string accountId = 1;
}

message CheckBalanceResponse {
  double balance = 1;
}

message SetBalanceRequest {
  string accountId = 1;
  double value = 2;
  bool isSentByPrimary = 3;
}

message SetBalanceResponse {
  bool status = 1;
}

service CheckBalanceService {
  rpc checkBalance(CheckBalanceRequest)
      returns (CheckBalanceResponse);
}

service SetBalanceService {
  rpc setBalance(SetBalanceRequest)
      returns(SetBalanceResponse);
}